--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "12.3.2",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-unity-webgl": "^9.4.2",
