--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,31 @@
 {
-    "theme_color": "#9d9c9c",
-    "background_color": "#9d9c9c",
-    "display": "fullscreen",
-    "scope": "/",
-    "start_url": "/",
-    "name": "ArcadeControllerSimulator",
-    "short_name": "ACS",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "theme_color": "#9d9c9c",
+  "background_color": "#9d9c9c",
+  "display": "fullscreen",
+  "scope": "/ArcadeControllerSimulator",
+  "start_url": "/ArcadeControllerSimulator/index",
+  "name": "ArcadeControllerSimulator",
+  "short_name": "ACS",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
