--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "theme_color": "#9d9c9c",
   "background_color": "#9d9c9c",
   "display": "fullscreen",
-  "scope": "/ArcadeControllerSimulator/",
+  "scope": "/",
   "start_url": "/",
   "name": "ArcadeControllerSimulator",
   "short_name": "ACS",
