--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,28 +2,28 @@
   "theme_color": "#9d9c9c",
   "background_color": "#9d9c9c",
   "display": "fullscreen",
-  "scope": "/ArcadeControllerSimulator/",
+  "scope": "/",
   "start_url": "/",
   "name": "ArcadeControllerSimulator",
   "short_name": "ACS",
   "icons": [
     {
-      "src": "/ArcadeControllerSimulator/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/ArcadeControllerSimulator/icon-256x256.png",
+      "src": "/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/ArcadeControllerSimulator/icon-384x384.png",
+      "src": "/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/ArcadeControllerSimulator/icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
